--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.21.0",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
   }
 }
