--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "env": "^0.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.5",
     "react-on-screen": "^2.1.1"
   },
