--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "env": "^0.0.2",
     "express": "^4.21.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7"
