--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.3",
+    "emailjs-com": "^3.2.0",
     "env": "^0.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
@@ -20,7 +21,9 @@
     "react-icons": "^5.3.0",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-multi-carousel": "^2.8.5",
-    "react-on-screen": "^2.1.1"
+    "react-on-screen": "^2.1.1",
+    "react-router-dom": "^6.26.2",
+    "react-router-hash-link": "^2.4.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
