--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start": "vite",
-    "build": "vite build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "vite build"
   },
   "dependencies": {
     "animate.css": "^4.1.1",
