--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "env": "^0.0.2",
     "express": "^4.21.0",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "serverless-http": "^3.2.0"
   }
 }
